--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1298,6 +1298,14 @@ input, select, textarea {
 			border-radius: 100%;
 		}
 
+		#header .logo {
+    			width: 5.5rem;
+    			height: 5.5rem;
+    			background-image: url('images/02.png');
+    			background-size: contain;
+    			background-repeat: no-repeat;
+		}
+
 			#header .logo .icon:before {
 				font-size: 2rem;
 			}
@@ -1430,7 +1438,12 @@ input, select, textarea {
 		}
 
 		@media screen and (max-width: 736px) {
-
+			#header .logo {
+        		width: 4.75rem;  /* 76px if 1rem=16px */
+        		height: 4.75rem;
+        		background-image: url('images/02.png');
+    			}
+			
 			#header > * {
 				margin-top: 2rem;
 			}
