--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1296,7 +1296,15 @@ input, select, textarea {
 			line-height: 5.5rem;
 			border: solid 1px #ffffff;
 			border-radius: 100%;
-		}
+			
+			background-image: url('images/02.png');
+    			background-size: 60%;       /* Scales image to fit inside circle */
+    			background-repeat: no-repeat;
+    			background-position: center;
+    			display: flex;             /* Enables centering */
+    			align-items: center;       /* Vertical center */
+    			justify-content: center; 
+			}
 
 		#header .logo {
     			width: 5.5rem;
@@ -1304,8 +1312,7 @@ input, select, textarea {
     			background-image: url('images/02.png');
     			background-size: contain;
     			background-repeat: no-repeat;
-		}
-
+			
 			#header .logo .icon:before {
 				font-size: 2rem;
 			}
