--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1297,7 +1297,7 @@ input, select, textarea {
 			border: solid 1px #ffffff;
 			border-radius: 100%;
 			
-			background-image: url('images/02.png');
+			background-image: url('https://gfl2ordnance.github.io/images/02.png');
     			background-size: 60%;       /* Scales image to fit inside circle */
     			background-repeat: no-repeat;
     			background-position: center;
@@ -1309,7 +1309,7 @@ input, select, textarea {
 		#header .logo {
     			width: 5.5rem;
     			height: 5.5rem;
-    			background-image: url('images/02.png');
+    			background-image: url('https://gfl2ordnance.github.io/images/02.png');
     			background-size: contain;
     			background-repeat: no-repeat;
 			
