--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1296,6 +1296,8 @@ input, select, textarea {
 			line-height: 5.5rem;
 			border: solid 1px #ffffff;
 			border-radius: 100%;
+    			background: url('https://gfl2ordnance.github.io/images/02.png') no-repeat center center/contain;
+    			margin: 0 auto 1.5em;
 			}
 			
 			#header .logo .icon:before {
