--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1296,15 +1296,16 @@ input, select, textarea {
 			line-height: 5.5rem;
 			border: solid 1px #ffffff;
 			border-radius: 100%;
+			background-image: url('https://gfl2ordnance.github.io/images/02.png');
+    			background-size: 60%;       /* Scales image to fit inside circle */
+    			background-repeat: no-repeat;
+    			background-position: center;
+    			display: flex;             /* Enables centering */
+    			align-items: center;       /* Vertical center */
+    			justify-content: center;   /* Horizontal center */
 			}
 
-		#header .logo {
-    			width: 5.5rem;
-    			height: 5.5rem;
-    			background-image: url('https://gfl2ordnance.github.io/images/02.png');
-    			background-size: contain;
-    			background-repeat: no-repeat; }
-
+		
 			#header .logo .icon:before {
 				font-size: 2rem;
 			}
